Learned about pandas

--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "evenArray = np.array(even)\n",
+    "evenArray = np.array(even)    #changing list to array\n",
     "evenArray"
    ]
   },
@@ -219,7 +219,7 @@
     }
    ],
    "source": [
-    "evenArray[1:4]"
+    "evenArray[1:4]   #slices the values from 1 to 3  [1,4)."
    ]
   },
   {
@@ -240,7 +240,7 @@
     }
    ],
    "source": [
-    "type(evenArray)"
+    "type(evenArray)    #returns the type of the evenArray"
    ]
   },
   {
@@ -261,7 +261,7 @@
     }
    ],
    "source": [
-    "evenArray.ndim #checking the dimension of the array."
+    "evenArray.ndim #returns the dimension of the array."
    ]
   },
   {
@@ -270,9 +270,9 @@
    "metadata": {},
    "source": [
     "## Difference between List and array \n",
-    "- Numpy array are faster than python list.\n",
-    "- Numpy array are memory effecient than python list.\n",
-    "- Numpy array supports homogeneous date type while python list supports multiple data type."
+    "> - Numpy array are faster than python list.\n",
+    "> - Numpy array are memory effecient than python list.\n",
+    "> - Numpy array supports homogeneous date type while python list supports multiple data type."
    ]
   },
   {
@@ -293,8 +293,7 @@
     }
    ],
    "source": [
-    "x = np.zeros(5,dtype=np.int8)  #Numpy array are memory effecient than python list. because of memory management\n",
-    "x"
+    "x = np.zeros(5,dtype=np.int8)  #Numpy array are memory effecient than python list."
    ]
   },
   {
@@ -502,7 +501,7 @@
     }
    ],
    "source": [
-    "np.linspace(0,1,5)"
+    "np.linspace(0,1,5)   #creates 5 elements of equal spacing between 0 and 1"
    ]
   },
   {
