--- a/logisticRegression.ipynb
+++ b/logisticRegression.ipynb
@@ -1333,7 +1333,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f9511809c10>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f805f675fd0>"
       ]
      },
      "execution_count": 32,
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "d2800113",
    "metadata": {},
    "outputs": [
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "a0a77da1",
    "metadata": {},
    "outputs": [
@@ -1393,7 +1393,7 @@
        "0.7391304347826086"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "7fc1225b",
    "metadata": {},
    "outputs": [
@@ -1415,7 +1415,7 @@
        "0.75"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1426,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "id": "a6fcff54",
    "metadata": {},
    "outputs": [
@@ -1436,7 +1436,7 @@
        "0.7445255474452556"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
