Titanic survival prediction

--- a/logisticRegression.ipynb
+++ b/logisticRegression.ipynb
@@ -1333,7 +1333,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f805f675fd0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f2824077f90>"
       ]
      },
      "execution_count": 32,
@@ -1399,7 +1399,6 @@
     }
    ],
    "source": [
-    "\n",
     "precision_score(y_test, y_pred)"
    ]
   },
@@ -1448,11 +1447,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "27d34246",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[37], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m testpred\u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict(test)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'test' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "testpred= model.predict(test)"
+   ]
   },
   {
    "cell_type": "code",
